--- a/ProyectosJQuery2024/web08generabotones.html
+++ b/ProyectosJQuery2024/web08generabotones.html
@@ -18,7 +18,7 @@
 
     $(document).ready(function () {
         for (let i = 0; i < 10; i++) {
-            let value = Math.floor(Math.random() * 10)
+            let value = Math.floor(Math.random() * 10) + 1
             var btt = $('<button>', {'value':value, 'text':'Sumar ' + value})
             
             $('#contenedor').append(btt);
